[package]
name = "buildkite-keda-scaler"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.0", features = ["derive", "env", "unicode"] }
color-eyre = "0.6.2"
prost = "0.11.9"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros"] }
tonic = "0.9.2"
tracing = "0.1.37"

[build-dependencies]
tonic-build = "0.9.2"
